 - Adapt CMake CI to matrix of latest compilers
 - Check for MPI_Aint_diff in CMake and Autoconf
 - Check if MPI_UNSIGNED_LONG_LONG, MPI_SIGNED_CHAR and MPI_INT8_T are available
 - Fix tarball naming and add a CMake target to generate .tarball-version file
 - Add an option to disable the file checks; affects sc_test_scda
 - Minor updates to autoconf/automake for simplification

## 2.8.6

There have been breaking changes, very strictly speaking.

### Documentation

 - Begin maintaining a release notes file.
 - Add to documentation of sc_containers.h.
 - Completion and some polishing of the doxygen documentation in sc_io.h.
 - Add file-oriented data format, API and documentation, suitable for
   parallel, partition-independent disk I/O, in sc_scda.h.
 - Restructure the I/O module in the doxygen documentation.

### Build system

 - Bump library version according to libtool to 3:0:0.
 - No longer install getopt and puff original headers.
 - Make sc_getopt.h a purely internal header file.
 - Add a generic external library installation option.
 - Add script doc/p4est-build-wdeps.sh for autotools build.
 - Further align CMake with the autoconf build system.
 - Update CMake logic to configure zlib and jansson.
 - Add CMake option to run tests with Valgrind.
 - Warn if configuring MPI on and MPI I/O off.
 - Renaming of CMake build system variables
 - Make MPI checking functionality more robust in CMake.

### Functionality

 - Further align I/O wrappers with and without MPI.
 - Change the semantic of sc_io_open to always truncate a newly created file.
 - Simplify the replacements for MPI_{read,write}_at*.
 - Further updates to the MPI I/O wrapper code.
 - Deprecate the configuration with MPI but without MPI I/O.
 - Remove sc_io_{write,read}_all.
 - Add sc_io_source, sink_destroy_null functions.
 - Make sure not to sc_io_source_read an array beyond its length.
 - Add sc_io_file_load, save functions and test program.
 - Update sc_hash_array to hide much of internal state.