@@ -35,6 +35,7 @@
  - Fix tarball naming and add a CMake target to generate .tarball-version file
  - Add an option to disable the file checks; affects sc_test_scda
  - Minor updates to autoconf/automake for simplification
+ - Remove OpenMP configure option (code moved to attic)
 
 ## 2.8.6
 
